# anyBrainer

./: .gitignore  LICENSE  README.md  cl_w_aux.yaml  finetune_cls.yaml  finetune_mim.yaml  finetune_mm.yaml  finetune_reg.yaml  finetune_seg.yaml  finetune_sweep.yaml  finetune_task1.yaml  finetune_task2.yaml  finetune_task3.yaml  pretrain_cl.yaml  pretrain_mim.yaml  pretraining_cl.yaml  pyproject.toml
app/: Apptainer1.def  Apptainer2.def  Apptainer3.def  Apptainer_task1.def  Apptainer_task2.def  Apptainer_task3.def  predict.py  preprocess.py  sitecustomize.py  utils.py
scripts/: format.sh  run_tests.py
scripts/prepare_downstream/: fomo1.py  fomo2.py  fomo3.py  run_preprocessing.py
scripts/prepare_fomo-60k/: preprocess.py
src/anyBrainer/: __init__.py  __main__.py  pretrain.py  registry.py
src/anyBrainer/config/: __init__.py  config_loader.py  resolve.py
src/anyBrainer/core/: __init__.py
src/anyBrainer/core/data/: __init__.py  datamodule.py  dataset.py  explorer.py  utils.py
src/anyBrainer/core/engines/: __init__.py  callbacks.py  mixins.py  models.py  utils.py  workflows.py
src/anyBrainer/core/inferers/: __init__.py  classification.py  classify.py  utils.py
src/anyBrainer/core/losses/: __init__.py  infonce.py  utils.py
src/anyBrainer/core/networks/: __init__.py  blocks.py  nets.py  utils.py
src/anyBrainer/core/schedulers/: __init__.py  lr_schedulers.py  param_schedulers.py  utils.py
src/anyBrainer/core/transforms/: __init__.py  flat.py  transformlists.py  unit_transforms.py  utils.py
src/anyBrainer/core/utils/: __init__.py  data.py  eval.py  feats.py  io.py  metrics.py  mil.py  misc.py  models.py  parallel.py  visualization.py
src/anyBrainer/data/: README.md  __init__.py  datamodule.py  dataset.py  explorer.py  utils.py
src/anyBrainer/data/prepare_downstream/: fomo1.py  fomo2.py  fomo3.py
src/anyBrainer/data/prepare_fomo-60k/: preprocess.py
src/anyBrainer/engines/: __init__.py  callbacks.py  factory.py  models.py  utils.py  workflows.py
src/anyBrainer/factories/: __init__.py  module.py  unit.py
src/anyBrainer/inference/: README.md
src/anyBrainer/interfaces/: __init__.py  data.py  log.py  mixin.py  schedulers.py  workflow.py
src/anyBrainer/log/: __init__.py  logging_manager.py  utils.py
src/anyBrainer/losses/: __init__.py  infonce.py  utils.py
src/anyBrainer/models/: README.md  __init__.py  blocks.py  losses.py  model.py  networks.py  plmodule.py  schedulers.py  utils.py
src/anyBrainer/networks/: __init__.py  blocks.py  nets.py
src/anyBrainer/registry/: __init__.py  register.py  utils.py
src/anyBrainer/schedulers/: __init__.py  lr_schedulers.py  param_schedulers.py
src/anyBrainer/transforms/: README.md  __init__.py  builders.py  flat.py  interfaces.py  managers.py  masking_transforms.py  unit_transforms.py  utils.py
src/anyBrainer/utils/: README.md  __init__.py  data.py  eval.py  io.py  misc.py  models.py  parallel.py  utils.py
tests/: config_test.py  conftest.py
tests/data/: test_datamodule.py  test_utils.py
tests/engines/: test_callbacks.py  test_deep_supervision_segmentation.py  test_models.py  test_utils.py
tests/inferers/: test_inferers.py
tests/integration/: test_end_to_end.py
tests/losses/: test_losses.py
tests/models/: test_blocks.py  test_losses.py  test_model.py  test_networks.py  test_schedulers.py
tests/nets/: test_blocks.py  test_networks.py
tests/schedulers/: test_schedulers.py
tests/transforms/: test_builders.py  test_composed.py  test_managers.py  test_masking_transforms.py  test_segmentation_transforms.py  test_unit_transforms.py
tests/unit/test_data/: fixtures.py  test_datamodule.py
tests/unit/test_transforms/: test_builders.py  test_masking_transforms.py
tests/utils/: mock_data.py
tests/visualize/: test_transforms.py  utils.py
visualize/: utils.py  viz_transforms.py
