[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyBrainer"
version = "0.1.0"
description = "anyBrainer - A large-scale pretrained foundation model for 3D brain analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Petros Koutsouvelis"},
    {name = "Sina Amirrajab"},
    {name = "Yasmina Al Khalil"},
    {name = "Leonard Nürnberg"},
    {name = "Leroy Volmer"},
]
dependencies = [
    "lightning>=2.1.4",
    "monai==1.5.0",
    "numpy>=1.23",
    "opencv-python>=4.8.1.78",
    "torch>2.4.1",
    "wandb>=0.16.0",
    "matplotlib==3.10.3",
    "einops==0.8.1",
    "typeguard==4.4.4",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
]
test = [
    "pytest>=6.0.0",
    "flake8>=6.1.0",
    "black>=23.10.1",
]

[project.scripts]
anyBrainer = "anyBrainer.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["anyBrainer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "viz: marks tests as visualization-only (deselect with '-m \"not viz\"')",
    "serial",
]
addopts = "-m 'not viz'"

[tool.black]
line-length = 88
target-version = ["py39"]